# FFPlayer

./: CMakeLists.txt  README.md
src/: AVFrameQueue.cpp  AVFrameQueue.h  AVPacketQueue.cpp  AVPacketQueue.h  BufferQueue.h  FFDecoder.cpp  FFDecoder.h  FFPlayer.cpp  FFPlayer.h  FFSource.cpp  FFSource.h  FrameQueue.cpp  FrameQueue.h  PacketQueue.cpp  PacketQueue.h  SDLDisplay.cpp  SDLDisplay.h  SDLRender.cpp  SDLRender.h  common.h  main.cpp
src/infra/net/: BasicSocket.cpp  BasicSocket.h  TCPSocket.cpp  TCPSocket.h  UDPSocket.cpp  UDPSocket.h
src/source/: FFSource.h  ISource.cpp  ISource.h
src/source/rtsp/: Demuxer.cpp  Demuxer.h  RTPPacket.h  RTPQueue.cpp  RTPQueue.h  RTSPClient.cpp  RTSPClient.h
